--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-
   </head>
-  <body>
+  <body style="font-family: sans-serif;">
     <div id="app"></div>
     <script src="./dist/bundle.js"></script>
   </body>
