Completed almost all of the CSS

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Amazon Item Details Module</title>
+    <link rel="stylesheet" type="text/css" href="style.css"></link>
   </head>
-  <body style="font-family: sans-serif;">
+  <body>
     <div id="app"></div>
     <script src="./dist/bundle.js"></script>
   </body>
