--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css"></link>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="item-details"></div>
     <script src="./dist/bundle.js"></script>
   </body>
 </html>
